# injury-report-monitor

./: README.md  pyproject.toml
injury_report_monitor/: injury_monitor.py  injury_sources.py  shipp_wrapper.py
shipp_injuries/: __init__.py
skills/injury-report-monitor/: README.md  SKILL.md
skills/injury-report-monitor/references/: gui-spec.md  setup.md
skills/injury-report-monitor/scripts/: __init__.py  shipp_wrapper.py
skills/injury-report-monitor/tests/: test_injuries.py
