[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "injury-report-monitor"
version = "0.1.0"
description = "Aggregated injury reports for NBA, MLB, and Soccer with player status tracking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["requests>=2.28", "beautifulsoup4>=4.12"]
keywords = ["sports", "injuries", "nba", "mlb", "soccer", "injury-report"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/buildkit-ai/injury-report-monitor"
Repository = "https://github.com/buildkit-ai/injury-report-monitor"

[tool.hatch.build.targets.wheel]
packages = ["injury_report_monitor"]
